samples/_failures_safe/1761723250_89548b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3962c045.c: In function ‘main’:
./samples/SAFE/__tmp_3962c045.c:155:12: error: missing terminating " character
  155 |     printf("\nSecond matrix:\n
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3962c045.c:155:5: error: expected expression at end of input
  155 |     printf("\nSecond matrix:\n
      |     ^~~~~~
./samples/SAFE/__tmp_3962c045.c:155:5: error: expected declaration or statement at end of input
